<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    >

    <data>
        <variable name="debtViewModel"
                  type="com.gnardini.frienddebttracker.screen.edit_debt.EditDebtViewModel" />
    </data>

    <LinearLayout
        android:layout_width="@dimen/debt_popup_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{debtViewModel.title}"
            android:textSize="@dimen/debt_title"
            android:textColor="@color/debt_title"
            android:textAllCaps="true"
            fontPath="@string/font_bold"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/debt_name"
            android:theme="@style/ColorStyle"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="160dp"
                android:inputType="textCapWords"
                android:text="@{debtViewModel.name}"
                android:textSize="@dimen/new_debt_text_size"
                android:addTextChangedListener="@{debtViewModel.onNameChanged}"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/debt_amount"
            android:theme="@style/ColorStyle"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="@{String.format(`%.02f`, debtViewModel.amount)}"
                android:textSize="@dimen/new_debt_text_size"
                android:addTextChangedListener="@{debtViewModel.onAmountChanged}"
                android:inputType="numberDecimal"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_debt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/debt_save"
                android:textColor="@color/action_button_color"
                android:textSize="@dimen/new_debt_text_size"
                android:textAllCaps="true"
                android:background="?attr/selectableItemBackground"
                fontPath="@string/font_medium"
                />

            <TextView
                android:id="@+id/edit_debt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:padding="4dp"
                android:text="@string/debt_cancel"
                android:textColor="@color/action_button_color"
                android:textSize="@dimen/new_debt_text_size"
                android:textAllCaps="true"
                android:background="?attr/selectableItemBackground"
                fontPath="@string/font_medium"
                />

        </LinearLayout>

    </LinearLayout>

</layout>
