<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="@dimen/debt_popup_width"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/app_background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_debt_title"
        android:textSize="@dimen/debt_title"
        android:textColor="@color/debt_title"
        android:textAllCaps="true"
        fontPath="@string/font_bold"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Name"
        android:theme="@style/ColorStyle"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/new_debt_text_size"
            android:inputType="textCapWords"
            android:minWidth="160dp"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Amount"
        android:theme="@style/ColorStyle"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:textSize="@dimen/new_debt_text_size"
            android:inputType="numberDecimal"
            />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/new_debt_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/new_is_loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/debt_outgoing"
            android:textSize="@dimen/new_debt_text_size"
            android:buttonTint="@color/radio_button_color"
            />

        <RadioButton
            android:id="@+id/new_is_debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debt_incoming"
            android:textSize="@dimen/new_debt_text_size"
            android:buttonTint="@color/radio_button_color"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/new_debt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="Save"
            android:textColor="@color/action_button_color"
            android:textSize="@dimen/new_debt_text_size"
            android:textAllCaps="true"
            android:background="?attr/selectableItemBackground"
            fontPath="@string/font_medium"
            />

        <TextView
            android:id="@+id/new_debt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:padding="4dp"
            android:text="Cancel"
            android:textColor="@color/action_button_color"
            android:textSize="@dimen/new_debt_text_size"
            android:textAllCaps="true"
            android:background="?attr/selectableItemBackground"
            fontPath="@string/font_medium"
            />

    </LinearLayout>

</LinearLayout>